syntax ="proto3";

import "google/protobuf/empty.proto";

option csharp_namespace = "DeviceConnector.Protos";

package employee;

service EmployeeService {
	rpc SyncAttendanceData (google.protobuf.Empty) returns (BaseResponse);
	rpc UploadEmployeeData (UploadEmployeeDataRequest) returns (BaseResponse);
	rpc UploadFingerprint (UploadFingerprintRequest) returns (BaseResponse);
	rpc BatchUploadEmployeeData (BatchUploadEmployeeDataRequest) returns (BatchUploadResponse);
	rpc BatchUploadFingerprints (BatchUploadFingerprintsRequest) returns (BatchUploadResponse);
	rpc GetEmployeeData (GetEmployeeDataRequest) returns (GetEmployeeDataResponse);
	rpc GetFingerprintData (GetFingerprintDataRequest) returns (BaseResponse);
	rpc GetAllEmployees (google.protobuf.Empty) returns (GetAllEmployeesResponse);
	rpc GetAllFingerprints (google.protobuf.Empty) returns (GetAllFingerprintsResponse);
	rpc DeleteEmployeeData(DeleteEmployeeDataRequest) returns (BaseResponse);
	rpc DeleteFingerprint (DeleteFingerprintRequest) returns (BaseResponse);
}

// Base response type for all responses
message BaseResponse {
	bool success = 1;
	string message = 2;
}

// Response for batch operations
message BatchUploadResponse {
	bool success = 1;
	string message = 2;
	repeated UploadResult results = 3;
	int32 success_count = 4;
	int32 failure_count = 5;
}

message GetEmployeeDataResponse {
	bool success = 1;
	string message = 2;
	employee employee = 3;
}

message GetAllEmployeesResponse {
	bool success = 1;
	string message = 2;
	repeated employee employees = 3;
}

message GetAllFingerprintsResponse {
	bool success = 1;
	string message = 2;
	int32 total_count = 3;
	int32 success_count = 4;
}

message employee {
	int32 employeeId = 1;
	string name = 2;
	string password = 3;
	int32 privilege = 4; // 0: normal, 1: admin, 2: superadmin
	bool enable = 5; // true: enabled, false: disabled
}

message fingerprint {
	int32 employeeId = 1;
	int32 fingerIndex = 2;
	string fingerData = 3;
	int32 fingerLength = 4;
}

message UploadResult {
	int32 employee_id = 1;
	bool success = 2;
	string message = 3;
}

message UploadEmployeeDataRequest {
	employee employee = 1;
}

message UploadFingerprintRequest {
	fingerprint fingerprint = 1;
}

message BatchUploadEmployeeDataRequest {
	repeated employee employees = 1;
}

message BatchUploadFingerprintsRequest {
	repeated fingerprint fingerprints = 1;
}

message GetEmployeeDataRequest {
	int32 employeeId = 1;
}

message GetFingerprintDataRequest {
	int32 employeeId = 1;
}

message DeleteEmployeeDataRequest {
	int32 employeeId = 1;
}

message DeleteFingerprintRequest {
	int32 employeeId = 1;
	int32 fingerIndex = 2;
}